--- a/consultorio-T2/consultorio/src/main/resources/templates/fragments/sidebar.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/fragments/sidebar.html
@@ -16,13 +16,13 @@
 		<div sec:authorize="hasRole('ROLE_PACIENTE')">
 			<ul class="nav nav-pills">
 				<li class="nav-item"><span class="nav-link active"
-					th:text="#{sidebar.titulo.compra}"></span></li>
+					th:text="#{sidebar.titulo.consulta}"></span></li>
 				<li class="nav-item"><a class="nav-link"
-					th:href="@{/compras/cadastrar}"> <i class="oi oi-plus"></i> <span
-						th:text="#{sidebar.link.cadastrar}"></span>
+					th:href="@{/consultas-paciente/cadastrar}"> <i class="oi oi-plus"></i> <span
+						th:text="#{consulta.cadastrar.label}"></span>
 				</a></li>
 				<li class="nav-item"><a class="nav-link"
-					th:href="@{/compras/listar}"> <i class="oi oi-spreadsheet"></i>
+					th:href="@{/consultas-paciente/listar}"> <i class="oi oi-spreadsheet"></i>
 						<span th:text="#{sidebar.link.listar}"></span>
 				</a></li>
 			</ul>
