--- a/consultorio-T2/consultorio/src/main/resources/templates/fragments/sidebar.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/fragments/sidebar.html
@@ -28,6 +28,8 @@
 			</ul>
 		</div>
 
+		
+
 		<!-- <div sec:authorize="hasRole('ROLE_ADMIN')">
 			<ul class="nav nav-pills">
 				<li class="nav-item"><span class="nav-link active"
@@ -83,6 +85,21 @@
 				</a></li>
 				<li class="nav-item"><a class="nav-link"
 					th:href="@{/pacientes/listar}"> <i class="oi oi-spreadsheet"></i>
+						<span th:text="#{sidebar.link.listar}"></span>
+				</a></li>
+			</ul>
+		</div>
+
+		<div sec:authorize="hasRole('ROLE_ADMIN')">
+			<ul class="nav nav-pills">
+				<li class="nav-item"><span class="nav-link active"
+					th:text="#{sidebar.titulo.medico}"></span></li>
+				<li class="nav-item"><a class="nav-link"
+					th:href="@{/medicos/cadastrar}"> <i class="oi oi-plus"></i> <span
+						th:text="#{sidebar.link.cadastrar}"></span>
+				</a></li>
+				<li class="nav-item"><a class="nav-link"
+					th:href="@{/medicos/listar}"> <i class="oi oi-spreadsheet"></i>
 						<span th:text="#{sidebar.link.listar}"></span>
 				</a></li>
 			</ul>
