--- a/consultorio-T2/consultorio/src/main/resources/templates/fragments/sidebar.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/fragments/sidebar.html
@@ -28,6 +28,16 @@
 			</ul>
 		</div>
 
+		<div sec:authorize="hasRole('ROLE_MEDICO')">
+			<ul class="nav nav-pills">
+				<li class="nav-item"><span class="nav-link active"
+					th:text="#{consulta.listar.label}"></span></li>
+				<li class="nav-item"><a class="nav-link"
+					th:href="@{/consultas-medico/listar}"> <i class="oi oi-spreadsheet"></i>
+						<span th:text="#{sidebar.link.listar}"></span>
+				</a></li>
+			</ul>
+		</div>
 		
 
 		<!-- <div sec:authorize="hasRole('ROLE_ADMIN')">
