Internacionalizando lista de medicos sem login

--- a/consultorio-T2/consultorio/src/main/resources/templates/login.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/login.html
@@ -117,7 +117,7 @@
 					</div>
 				</form>
 				
-				<a class="button" href="/noAutho/listar">Listar Médicos</a>
+				<a class="button" href="/noAutho/listar" th:text="#{login.listar}"></a>
 			</div>
 		</div>
 	</div>
