--- a/consultorio-T2/consultorio/src/main/resources/templates/login.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/login.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout2}">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
+	layout:decorate="~{layout2}">
+
 <head>
-<title th:text="#{login.message}"></title>
-<style>
-	.button {
-		display: inline-block;
-		padding: 10px 20px;
-		background-color: #157988;
-		color: white;
-		text-decoration: none;
-		border: none;
-		border-radius: 5px;
-		cursor: pointer;
-	}
-</style>
+	<title th:text="#{login.message}"></title>
+	<style>
+		.button {
+			display: inline-block;
+			padding: 10px 20px;
+			background-color: #157988;
+			color: white;
+			text-decoration: none;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+		}
+	</style>
 </head>
+
 <body>
 	<div layout:fragment="content" th:remove="tag">
 
@@ -41,14 +43,13 @@
 					</div> -->
 
 					<div class="form-group">
-						<label for="email" th:text="#{login.email}"></label>: <input
-							type="text" id="username" name="username" class="form-control"
-							autofocus="autofocus" th:placeholder="#{login.email}" value="admin@email.com">
+						<label for="email" th:text="#{login.email}"></label>: <input type="text" id="username"
+							name="username" class="form-control" autofocus="autofocus" th:placeholder="#{login.email}"
+							value="admin@email.com">
 					</div>
 					<div class="form-group">
-						<label for="password" th:text="#{login.password}"></label>: <input
-							type="password" id="password" name="password"
-							class="form-control" th:placeholder="#{login.password}" value="admin">
+						<label for="password" th:text="#{login.password}"></label>: <input type="password" id="password"
+							name="password" class="form-control" th:placeholder="#{login.password}" value="admin">
 					</div>
 					<div class="form-group">
 						<div class="row">
@@ -70,14 +71,13 @@
 					</div>
 
 					<div class="form-group">
-						<label for="email" th:text="#{login.email}"></label>: <input
-							type="text" id="username" name="username" class="form-control"
-							autofocus="autofocus" th:placeholder="#{login.email}" value="paciente@email.com">
+						<label for="email" th:text="#{login.email}"></label>: <input type="text" id="username"
+							name="username" class="form-control" autofocus="autofocus" th:placeholder="#{login.email}"
+							value="paciente@email.com">
 					</div>
 					<div class="form-group">
-						<label for="password" th:text="#{login.password}"></label>: <input
-							type="password" id="password" name="password"
-							class="form-control" th:placeholder="#{login.password}" value="123">
+						<label for="password" th:text="#{login.password}"></label>: <input type="password" id="password"
+							name="password" class="form-control" th:placeholder="#{login.password}" value="123">
 					</div>
 					<div class="form-group">
 						<div class="row">
@@ -98,14 +98,13 @@
 					</div>
 
 					<div class="form-group">
-						<label for="email" th:text="#{login.email}"></label>: <input
-							type="text" id="username" name="username" class="form-control"
-							autofocus="autofocus" th:placeholder="#{login.email}" value="medico@email.com">
+						<label for="email" th:text="#{login.email}"></label>: <input type="text" id="username"
+							name="username" class="form-control" autofocus="autofocus" th:placeholder="#{login.email}"
+							value="medico@email.com">
 					</div>
 					<div class="form-group">
-						<label for="password" th:text="#{login.password}"></label>: <input
-							type="password" id="password" name="password"
-							class="form-control" th:placeholder="#{login.password}" value="123">
+						<label for="password" th:text="#{login.password}"></label>: <input type="password" id="password"
+							name="password" class="form-control" th:placeholder="#{login.password}" value="123">
 					</div>
 					<div class="form-group">
 						<div class="row">
@@ -116,10 +115,28 @@
 						</div>
 					</div>
 				</form>
+
+				<a class="button" href="/noAutho/listar" th:text="#{login.listar}"></a><br><br>
+
 				
-				<a class="button" href="/noAutho/listar" th:text="#{login.listar}"></a>
+				
+				<button onclick="listarMedicosPorEspecialidade()">Listar Médicos por Especialidade</button>
+				<select id="especialidade" name="especialidade">
+					<option value="Cardiologia">Cardiologia</option>
+					<option value="Dermatologia">Dermatologia</option>
+					
+				</select>
+				
+				<script th:inline="javascript">
+					function listarMedicosPorEspecialidade() {
+						var especialidadeSelecionada = document.getElementById("especialidade").value;
+						window.location.href = '/noAutho/listaresp?especialidade=' + encodeURIComponent(especialidadeSelecionada);
+					}
+				</script>
+
 			</div>
 		</div>
 	</div>
 </body>
+
 </html>
