--- a/consultorio-T2/consultorio/src/main/resources/templates/medicos/cadastro.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/medicos/cadastro.html
@@ -41,7 +41,7 @@
 
 					<div class="form-group col-md-6">
 						<label th:text="#{medico.password.label}" for="password"></label> 
-						<input type="text" class="form-control" id="password"
+						<input type="password" class="form-control" id="password"
 							th:placeholder="#{medico.password.label}" autofocus="autofocus"
 							th:field="*{password}"
 							th:classappend="${#fields.hasErrors('password')} ? is-invalid" th:readonly="${medico.id != null}"/>
