Adicionando lista de especialidade

--- a/consultorio-T2/consultorio/src/main/resources/templates/medicos/cadastro.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/medicos/cadastro.html
@@ -38,8 +38,8 @@
 							<span th:errors="*{email}"></span>
 						</div>
 					</div>
-
-					<div class="form-group col-md-6">
+				
+					<div th:if="${medico.id==null}" class="form-group col-md-6">
 						<label th:text="#{medico.password.label}" for="password"></label> 
 						<input type="password" class="form-control" id="password"
 							th:placeholder="#{medico.password.label}" autofocus="autofocus"
@@ -49,6 +49,19 @@
 						<div class="invalid-feedback">
 							<span th:errors="*{password}"></span>
 						</div>
+					</div>
+
+					<div th:unless="${medico.id == null}" class="form-group col-md-6">
+						<label th:text="#{medico.password.label}" for="password"></label> 
+						<input type="password" class="form-control" name="novoPassword"
+							th:placeholder="#{medico.password.label}" autofocus="autofocus"
+							th:classappend="${#fields.hasErrors('password')} ? is-invalid" />
+
+						<input type="hidden" th:field="*{password}" />
+							
+						<!-- <div class="invalid-feedback">
+							<span th:errors="*{password}"></span>
+						</div> -->
 					</div>
 					
 					<div class="form-group col-md-6">
@@ -65,9 +78,9 @@
 					<div class="form-group col-md-6">
 						<label th:text="#{medico.CRM.label}" for="CRM"></label> 
 						<input type="text" class="form-control" id="CRM" th:field="*{CRM}"
-							autofocus="autofocus" placeholder="___.___.___-__"
+							autofocus="autofocus" placeholder="__.___/__"
 							th:classappend="${#fields.hasErrors('CRM')} ? is-invalid" 
-							data-mask="00.000/AA" data-mask-reverse="true" />
+							data-mask="00.000/AA" />
 							
 						<div class="invalid-feedback">
 							<span th:errors="*{CRM}"></span>
@@ -77,7 +90,16 @@
 					<input type="hidden" id="role" th:field="*{role}"/>
 				</div> 
 
-				<div class="form-group col-md-6">
+
+				<label >Selecione uma especialidade</label>
+				<br>
+				<select class="form-control" id="especialidade" th:field="*{especialidade}" required>
+					<!-- <option></option> -->
+					<option value="" disabled>Selecione uma especialidade.</option>
+					<option th:each="especialidade : ${especialidades}" th:value="${especialidade}" th:text="${especialidade}"></option>
+				</select>
+
+				<!-- <div class="form-group col-md-6">
 					<label th:text="#{medico.especialidade.label}" for="especialidade"></label> 
 					<input type="text" class="form-control" id="especialidade" th:field="*{especialidade}"
 						th:placeholder="#{medico.especialidade.label}" autofocus="autofocus"
@@ -86,7 +108,7 @@
 					<div class="invalid-feedback">
 						<span th:errors="*{especialidade}"></span>
 					</div>
-				</div>
+				</div> -->
 
 				<input type="hidden" id="id" th:field="*{id}" />
 				<button type="submit" th:text="#{button.salvar.label}"
