--- a/consultorio-T2/consultorio/src/main/resources/templates/noAutho/listarMedicosEsp.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/noAutho/listarMedicosEsp.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Listagem de Médicos por Especialidade</title>
+    <title th:text="#{title.listaEspec.label}"></title>
 
     <style>
         body {
