--- a/consultorio-T2/consultorio/src/main/resources/templates/noAutho/listarMedicos.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/noAutho/listarMedicos.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <title th:text="#{title.listaMedicos.label}"></title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,6 +56,7 @@
     </style>
 </head>
 <body>
+    <h1 th:text="#{title.listaMedicos.label}"></h1>
     <div class="table-responsive">
         <table class="table table-striped table-hover table-sm">
             <thead>
