--- a/consultorio-T2/consultorio/src/main/resources/templates/consultas-medico/lista.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/consultas-medico/lista.html
@@ -36,7 +36,7 @@
                             <td th:text="${consulta.id}"></td>
                             <td th:text="${consulta.paciente.nome}"></td>
 							<td th:text="${#temporals.format(consulta.dataConsulta, 'dd/MM/yyyy')}"></td>
-							<td th:text="${#temporals.format(consulta.horaConsulta, 'HH:mm')}"></td>
+							<td th:text="${consulta.horaConsulta}"></td>
 						</tr>
 					</tbody>
 				</table>
