Mais opções de especialidades

--- a/consultorio-T2/consultorio/src/main/resources/templates/login.html
+++ b/consultorio-T2/consultorio/src/main/resources/templates/login.html
@@ -66,6 +66,10 @@
 					<option th:value="Ginecologia" th:text="#{login.especialidade.ginecologia}">Ginecologia</option>
 					<option th:value="Pediatria" th:text="#{login.especialidade.pediatria}">Pediatria</option>
 					<option th:value="Urologia" th:text="#{login.especialidade.urologia}">Urologia</option>
+					<option th:value="Dentista" th:text="#{login.especialidade.dentista}">Dentista</option>
+					<option th:value="Oncologia" th:text="#{login.especialidade.oncologia}">Oncologia</option>
+					<option th:value="Gastroenterologia" th:text="#{login.especialidade.gastroenterologia}">Gastroenterologia</option>
+					<option th:value="Radiologia" th:text="#{login.especialidade.radiologia}">Radiologia</option>
 				</select>
 
 				<script th:inline="javascript">
